# libnapi

./: .gitmodules  CMakeLists.txt  README.md  package.json
include/: napi-macros.h  napi.h
include/napi/: module.h  modules.h
src/: napi.c
test/: CMakeLists.txt  basic-inline.c  basic.c  basic.cc  create-async-work.c  get-buffer-info-uint16array.c  get-buffer-info-uint8array.c  get-instance-data.c  get-value-string-utf8-length.c  get-value-string-utf8-truncate.c  get-value-string-utf8.c  helpers.h  module-constructor.c  module.c  module.cc
